--- a/SpotlightWeb/web/WEB-INF/web.xml
+++ b/SpotlightWeb/web/WEB-INF/web.xml
@@ -3,4 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <servlet>
+        <servlet-name>AddReservation</servlet-name>
+        <servlet-class>spotlightweb.servlets.AddReservationServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>AddReservation</servlet-name>
+        <url-pattern>/AddReservationServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
